--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,14 +5,14 @@ import Projects from "../components/Projects.astro";
 import Skills from "../components/Skills.astro";
 ---
 
-<Layout title="Hi, I'm Andy Hsu">
+<Layout title="Hi, I'm Sun">
   <main>
-    <h1>Hello, I'm <span class="text-gradient">Andy Hsu</span></h1>
+    <h1>Hello, I'm <span class="text-gradient">Sun</span></h1>
     <p class="instructions">
       👦<strong>Full Stack</strong> Developer /
-      <code>Master</code>'s student<br />
-      The best time to plant a tree was 20 years ago. The second best time is <strong
-        >now</strong
+      <code>high school</code>'s student<br />
+      A humble gentleman, as gentle as  <strong
+        >jade</strong
       >.
     </p>
     <Socials />
@@ -23,7 +23,7 @@ import Skills from "../components/Skills.astro";
     <Projects />
     <Skills />
     <footer mt-12>
-      <p text-sm op-40>Andy Hsu © 2022</p>
+      <p text-sm op-40>Sun © 2023</p>
     </footer>
     <style is:inline>
       .floatingchat-container-wrap,
