--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -3,13 +3,13 @@ import Social from "./Social.astro";
 const socials = [
   {
     text: "Github",
-    link: "https://github.com/Xhofe",
+    link: "https://github.com/iaesun",
     icon: "i-ri-github-fill",
     classes: "hover:bg-gray-700 dark:hover:bg-white dark:hover:text-gray-900",
   },
   {
     text: "Blog",
-    link: "https://blog.nn.ci",
+    link: "https://www.iaesun.com",
     icon: "i-ri-book-2-line",
     classes: "hover:bg-gradient-to-r from-[#fd5949] to-[#d6249f]",
   },
@@ -21,25 +21,25 @@ const socials = [
   },
   {
     text: "",
-    link: "https://twitter.com/Xh0fe",
+    link: "https://twitter.com/skt_312",
     icon: "i-ri-twitter-fill",
     classes: "hover:bg-[#00ACEE]",
   },
   {
     text: "",
-    link: "https://space.bilibili.com/1520762073",
+    link: "https://space.bilibili.com/1361359223",
     icon: "i-ri-bilibili-fill",
     classes: "hover:bg-[#fb7299]",
   },
   {
     text: "",
-    link: "mailto:i@nn.ci",
+    link: "mailto:me@iaesun.com",
     icon: "i-ri-mail-fill",
     classes: "hover:bg-[#00b0ff]",
   },
   {
     text: "",
-    link: "https://sp.nn.ci",
+    link: "https://sp.iaesun.com",
     icon: "i-twemoji:money-bag",
     classes: "hover:bg-red-4",
   },
