--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -12,7 +12,7 @@ const name = repo.split("/")[1];
 <a
   class="px-4 py-3 text-current rounded-md transition-colors decoration-none"
   bg="gray-400/10 hover:gray-400/20 "
-  href={`https://${repo}.com/`}
+  href={`https://${repo}.iaesun.com/`}
   target="_blank"
 >
   <div class="flex h-full items-center justify-center">
