--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -3,6 +3,7 @@ import Project from "./Project.astro";
 const projects = [
   {
     repo: "iaesun",
+    desc: "Test",
     desc: "A file list program that supports multiple storage, powered by Gin and Solidjs.",
     icon: "i-twemoji-open-file-folder",
   },
