--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -4,7 +4,7 @@ const projects = [
   {
     repo: "iaesun",
     desc: "Test",
-    desc: "A file list program that supports multiple storage, powered by Gin and Solidjs.",
+    desc: "A file list program that supports multiple storage.",
     icon: "i-twemoji-open-file-folder",
   },
   {
