--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -6,7 +6,7 @@ export interface Props {
   icon?: string;
 }
 
-const { icon, repo, desc } = Astro.props;
+const { icon, repo, desc, name } = Astro.props;
 ---
 
 <a
