--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -15,7 +15,7 @@ const socials = [
   },
   {
     text: "",
-    link: "https://stackoverflow.com/users/10545416/xhofe",
+    link: "https://gitee.com/imosun",
     icon: "i-jam-stackoverflow",
     classes: "hover:bg-#ff8200",
   },
