--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -16,7 +16,7 @@ const socials = [
   {
     text: "",
     link: "https://gitee.com/imosun",
-    icon: "i-jam-stackoverflow",
+    icon: "i-ri-codepen-line",
     classes: "hover:bg-#ff8200",
   },
   {
