--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -2,44 +2,88 @@
 import Project from "./Project.astro";
 const projects = [
   {
-    repo: "iaesun",
-    desc: "Test",
-    desc: "A file list program that supports multiple storage.",
+    repo: "cloud",
+    desc: "cloud disk",
     icon: "i-twemoji-open-file-folder",
   },
   {
-    repo: "iaesun",
-    desc: "⭐ Generate svg of contributors, multiple repo supported",
+    repo: "api",
+    desc: "⭐ API call service",
     icon: "i-twemoji-glowing-star",
   },
   {
-    repo: "iaesun",
-    desc: "Add a context menu to your solidjs app with ease. Inspired by react-contexify but for Solidjs.",
+    repo: "nav",
+    desc: "Navigation network",
     icon: "i-twemoji-love-you-gesture-light-skin-tone",
   },
   {
-    repo: "iaesun",
-    desc: "A command line tool for renaming your ipa files quickly and easily.",
+    repo: "web",
+    desc: "Webmaster Tools",
     icon: "i-twemoji-hammer-and-wrench",
   },
   {
-    repo: "iaesun",
-    desc: "A simple music player built with solid.js and howler.js.",
+    repo: "tool",
+    desc: "Online tools",
     icon: "i-twemoji-musical-notes",
   },
   {
-    repo: "iaesun",
-    desc: "A icon component set for SolidJS using Iconify.",
+    repo: "url",
+    desc: "Short Link",
     icon: "i-twemoji-smiling-face-with-horns",
   },
   {
-    repo: "iaesun",
-    desc: "The front end of Alist V3",
+    repo: "one",
+    desc: "personal assistant",
     icon: "i-twemoji-open-file-folder",
   },
   {
-    repo: "iaesun",
-    desc: "Multi-interface/custom interface file/picture upload",
+    repo: "hot",
+    desc: "Hot list",
+    icon: "i-twemoji-open-file-folder",
+  },
+  {
+    repo: "yjx",
+    desc: "Free film and television analysis V3",
+    icon: "i-twemoji-open-file-folder",
+  },
+  {
+    repo: "jx",
+    desc: "Free film and television analysis V2",
+    icon: "i-twemoji-open-file-folder",
+  },
+  {
+    repo: "analysis",
+    desc: "Film and television payment analysis",
+    icon: "i-twemoji-open-file-folder",
+  },
+  {
+    repo: "game",
+    desc: "Online games",
+    icon: "i-twemoji-open-file-folder",
+  },
+  {
+    repo: "music",
+    desc: "Cloud music",
+    icon: "i-twemoji-open-file-folder",
+  },
+  {
+    repo: "chat",
+    desc: "ChatGPT",
+    icon: "i-twemoji-open-file-folder",
+  },
+  {
+    repo: "love",
+    desc: "love space",
+    icon: "i-twemoji-open-file-folder",
+  },
+  {
+    repo: "dg",
+    desc: "QQ proxy link",
+    icon: "i-twemoji-open-file-folder",
+  },
+  {
+    repo: "web.hot",
+    desc: "Hot list V2",
     icon: "i-twemoji-framed-picture",
   },
 ];
