--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -64,7 +64,7 @@ const projects = [
   {
     repo: "music",
     desc: "Cloud music",
-    icon: "i-twemoji-open-file-folder",
+    icon: "i-ri-medal-line",
   },
   {
     repo: "chat",
