--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -9,27 +9,27 @@ const projects = [
   {
     repo: "api",
     desc: "⭐ API call service",
-    icon: "i-twemoji-glowing-star",
+    icon: "i-ri-code-box-fill",
   },
   {
     repo: "nav",
     desc: "Navigation network",
-    icon: "i-twemoji-love-you-gesture-light-skin-tone",
+    icon: "i-ri-compass-discover-fill",
   },
   {
     repo: "web",
     desc: "Webmaster Tools",
-    icon: "i-twemoji-hammer-and-wrench",
+    icon: "i-ri-html5-line",
   },
   {
     repo: "tool",
     desc: "Online tools",
-    icon: "i-twemoji-musical-notes",
+    icon: "i-ri-tools-fill",
   },
   {
     repo: "url",
     desc: "Short Link",
-    icon: "i-twemoji-smiling-face-with-horns",
+    icon: "i-ri-links-fill",
   },
   {
     repo: "one",
@@ -64,7 +64,7 @@ const projects = [
   {
     repo: "music",
     desc: "Cloud music",
-    icon: "i-ri-medal-line",
+    icon: "i-twemoji-musical-notes",
   },
   {
     repo: "chat",
