--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -34,32 +34,32 @@ const projects = [
   {
     repo: "one",
     desc: "personal assistant",
-    icon: "i-twemoji-open-file-folder",
+    icon: "i-ri-cpu-line",
   },
   {
     repo: "hot",
     desc: "Hot list",
-    icon: "i-twemoji-open-file-folder",
+    icon: "i-ri-fire-fill",
   },
   {
     repo: "yjx",
     desc: "Free film and television analysis V3",
-    icon: "i-twemoji-open-file-folder",
+    icon: "i-ri-movie-fill",
   },
   {
     repo: "jx",
     desc: "Free film and television analysis V2",
-    icon: "i-twemoji-open-file-folder",
+    icon: "i-ri-tv-line",
   },
   {
     repo: "analysis",
     desc: "Film and television payment analysis",
-    icon: "i-twemoji-open-file-folder",
+    icon: "i-ri-cast-line",
   },
   {
     repo: "game",
     desc: "Online games",
-    icon: "i-twemoji-open-file-folder",
+    icon: "i-ri-gamepad-fill",
   },
   {
     repo: "music",
@@ -69,22 +69,22 @@ const projects = [
   {
     repo: "chat",
     desc: "ChatGPT",
-    icon: "i-twemoji-open-file-folder",
+    icon: "i-ri-poll-fill",
   },
   {
     repo: "love",
     desc: "love space",
-    icon: "i-twemoji-open-file-folder",
+    icon: "i-ri-heart-fill",
   },
   {
     repo: "dg",
     desc: "QQ proxy link",
-    icon: "i-twemoji-open-file-folder",
+    icon: "i-ri-mac-fill",
   },
   {
     repo: "web.hot",
     desc: "Hot list V2",
-    icon: "i-twemoji-framed-picture",
+    icon: "i-ri-temp-hot-line",
   },
 ];
 ---
