--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -69,7 +69,7 @@ const projects = [
   {
     repo: "chat",
     desc: "ChatGPT",
-    icon: "i-ri-poll-fill",
+    icon: "i-ri-chat-poll-line",
   },
   {
     repo: "love",
