--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -14,25 +14,25 @@ const socials = [
     classes: "hover:bg-gradient-to-r from-[#fd5949] to-[#d6249f]",
   },
   {
-    text: "",
+    text: "Codepen",
     link: "https://gitee.com/imosun",
     icon: "i-ri-codepen-line",
     classes: "hover:bg-#ff8200",
   },
   {
-    text: "",
+    text: "Twitter",
     link: "https://twitter.com/skt_312",
     icon: "i-ri-twitter-fill",
     classes: "hover:bg-[#00ACEE]",
   },
   {
-    text: "",
+    text: "BiliBili",
     link: "https://space.bilibili.com/1361359223",
     icon: "i-ri-bilibili-fill",
     classes: "hover:bg-[#fb7299]",
   },
   {
-    text: "",
+    text: "Mail",
     link: "mailto:me@iaesun.com",
     icon: "i-ri-mail-fill",
     classes: "hover:bg-[#00b0ff]",
