--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -2,21 +2,21 @@
 import Social from "./Social.astro";
 const socials = [
   {
+    text: "Blog",
+    link: "https://www.iaesun.com",
+    icon: "i-ri-verified-badge-line",
+    classes: "hover:bg-gradient-to-r from-[#fd5949] to-[#d6249f]",
+  },
+  {
     text: "Github",
     link: "https://github.com/iaesun",
     icon: "i-ri-github-fill",
     classes: "hover:bg-gray-700 dark:hover:bg-white dark:hover:text-gray-900",
   },
   {
-    text: "Blog",
-    link: "https://www.iaesun.com",
-    icon: "i-ri-book-2-line",
-    classes: "hover:bg-gradient-to-r from-[#fd5949] to-[#d6249f]",
-  },
-  {
-    text: "Codepen",
+    text: "Gitee",
     link: "https://gitee.com/imosun",
-    icon: "i-ri-codepen-line",
+    icon: "i-ri-google-fill",
     classes: "hover:bg-#ff8200",
   },
   {
@@ -24,6 +24,54 @@ const socials = [
     link: "https://twitter.com/skt_312",
     icon: "i-ri-twitter-fill",
     classes: "hover:bg-[#00ACEE]",
+  },
+  {
+    text: "Instagram",
+    link: "https://www.instagram.com/sunkangteng",
+    icon: "i-ri-instagram-line",
+    classes: "hover:bg-gray-700 dark:hover:bg-white dark:hover:text-gray-900",
+  },
+  {
+    text: "Facebook",
+    link: "https://www.facebook.com/contentssun",
+    icon: "i-ri-facebook-box-fill",
+    classes: "hover:bg-gray-700 dark:hover:bg-white dark:hover:text-gray-900",
+  },
+  {
+    text: "VK",
+    link: "https://vk.com/iaesun",
+    icon: "i-ri-kick-fill",
+    classes: "hover:bg-gray-700 dark:hover:bg-white dark:hover:text-gray-900",
+  },
+  {
+    text: "Whatsapp",
+    link: "https://wa.me/qr/XLZROCMNOKONA1",
+    icon: "i-ri-whatsapp-line",
+    classes: "hover:bg-gray-700 dark:hover:bg-white dark:hover:text-gray-900",
+  },
+  {
+    text: "Snapchat",
+    link: "https://www.snapchat.com/add/aonlysun?share_id=NJh-_e1nfDU&locale=zh-Hans-CN",
+    icon: "i-ri-snapchat-line",
+    classes: "hover:bg-gray-700 dark:hover:bg-white dark:hover:text-gray-900",
+  },
+  {
+    text: "kakao-talk",
+    link: "http://qr.kakao.com/talk/RJ.yZhsL9qcWo5IJSHrmrcNsF7M-",
+    icon: "i-ri-kakao-talk-line",
+    classes: "hover:bg-gray-700 dark:hover:bg-white dark:hover:text-gray-900",
+  },
+  {
+    text: "YoutuBe",
+    link: "https://www.youtube.com/@sunkt",
+    icon: "i-ri-youtube-fill",
+    classes: "hover:bg-gray-700 dark:hover:bg-white dark:hover:text-gray-900",
+  },
+  {
+    text: "TikTok",
+    link: "https://tiktok.com/@cnsun",
+    icon: "i-ri-tiktok-fill",
+    classes: "hover:bg-gray-700 dark:hover:bg-white dark:hover:text-gray-900",
   },
   {
     text: "BiliBili",
