--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -29,7 +29,7 @@ const socials = [
     text: "Instagram",
     link: "https://www.instagram.com/sunkangteng",
     icon: "i-ri-instagram-line",
-    classes: "hover:bg-gray-700 dark:hover:bg-white dark:hover:text-gray-900",
+    classes: "hover:bg-#ff00a2",
   },
   {
     text: "Facebook",
