--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -35,43 +35,43 @@ const socials = [
     text: "Facebook",
     link: "https://www.facebook.com/contentssun",
     icon: "i-ri-facebook-box-fill",
-    classes: "hover:bg-gray-700 dark:hover:bg-white dark:hover:text-gray-900",
+    classes: "hover:bg-#004cff",
   },
   {
     text: "VK",
     link: "https://vk.com/iaesun",
     icon: "i-ri-kick-fill",
-    classes: "hover:bg-gray-700 dark:hover:bg-white dark:hover:text-gray-900",
+    classes: "hover:bg-#006eff",
   },
   {
     text: "Whatsapp",
     link: "https://wa.me/qr/XLZROCMNOKONA1",
     icon: "i-ri-whatsapp-line",
-    classes: "hover:bg-gray-700 dark:hover:bg-white dark:hover:text-gray-900",
+    classes: "hover:bg-#22ff00",
   },
   {
     text: "Snapchat",
     link: "https://www.snapchat.com/add/aonlysun?share_id=NJh-_e1nfDU&locale=zh-Hans-CN",
     icon: "i-ri-snapchat-line",
-    classes: "hover:bg-gray-700 dark:hover:bg-white dark:hover:text-gray-900",
+    classes: "hover:bg-#fffb00",
   },
   {
     text: "kakao-talk",
     link: "http://qr.kakao.com/talk/RJ.yZhsL9qcWo5IJSHrmrcNsF7M-",
     icon: "i-ri-kakao-talk-line",
-    classes: "hover:bg-gray-700 dark:hover:bg-white dark:hover:text-gray-900",
+    classes: "hover:bg-#ffee00",
   },
   {
     text: "YoutuBe",
     link: "https://www.youtube.com/@sunkt",
     icon: "i-ri-youtube-fill",
-    classes: "hover:bg-gray-700 dark:hover:bg-white dark:hover:text-gray-900",
+    classes: "hover:bg-#ff0d00",
   },
   {
     text: "TikTok",
     link: "https://tiktok.com/@cnsun",
     icon: "i-ri-tiktok-fill",
-    classes: "hover:bg-gray-700 dark:hover:bg-white dark:hover:text-gray-900",
+    classes: "hover:bg-#000000",
   },
   {
     text: "BiliBili",
@@ -83,13 +83,13 @@ const socials = [
     text: "Mail",
     link: "mailto:me@iaesun.com",
     icon: "i-ri-mail-fill",
-    classes: "hover:bg-[#00b0ff]",
+    classes: "hover:bg-#FFFFFF",
   },
   {
-    text: "",
+    text: "Support",
     link: "https://sp.iaesun.com",
     icon: "i-twemoji:money-bag",
-    classes: "hover:bg-red-4",
+    classes: "hover:bg-#ffd700",
   },
 ];
 ---
